--- a/beneficios.html
+++ b/beneficios.html
@@ -4,10 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Beneficios</title>
+  <title>Beneficios IT</title>
 </head>
 <body>
-  <h1>Beneficios</h1>
+  <h1>Beneficios IT</h1>
   <p>Beneficios de TI</p>
+  
+  <div>
+    <img src="https://media.gettyimages.com/photos/medellin-colombia-picture-id141477311?s=612x612" alt="Medellín" />
+  </div>
 </body>
 </html>
